bk_ida/gccida/g1/invert_exp_1
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/invert_exp_1/src/jump.c:2566:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v4; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/invert_exp_1/src/jump.c:2573:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v2 = ( __int64)v1[1]; 
               ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/invert_exp_1/src/jump.c:2580:28: error: use of undeclared identifier 'machine_mode'
v6 = gen_rtx_fmt_ee( v4, ( machine_mode)*( unsigned __int8 *)( v3 + 2), *( rtx *)( v3 + 8), *( rtx *)( v3 + 16)); 
                           ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/invert_exp_1/src/obj/jump.o] Error 1
